force-app/main/default/objects/Contact_Email_History__c/Contact_Email_History__c.object-meta.xml
<CustomObject>
    <label>Contact Email History</label>
    <nameField>
        <displayFormat>EH-{000000}</displayFormat>
        <label>Contact Email History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Email History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>