force-app/main/default/objects/Contact_Email_History__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate Email</label>
    <type>Checkbox</type>
</CustomField>