force-app/main/default/objects/Contact_Email_History__c/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>