force-app/main/default/objects/Contact_Email_History__c/fields/Edited_By_User__c.field-meta.xml
<CustomField>
    <fullName>Edited_By_User__c</fullName>
    <inlineHelpText>Which User Opted Contact into the below preferences.</inlineHelpText>
    <label>Edited By User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>