force-app/main/default/objects/Contact_Email_History__c/fields/Email_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Status__c</fullName>
    <formula>Lookup__r.Short_Text__c</formula>
    <label>Email Validation Status</label>
    <type>Text</type>
</CustomField>