force-app/main/default/objects/Contact_Email_History__c/fields/General_Announcements__c.field-meta.xml
<CustomField>
    <fullName>General_Announcements__c</fullName>
    <label>General Announcements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>