force-app/main/default/objects/Contact_Email_History__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LOOKUP__c.Lookup_Group__c</field>
            <operation>notEqual</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LOOKUP__c</referenceTo>
    <relationshipLabel>Contact Email History</relationshipLabel>
    <relationshipName>Contact_Email_History_Status_Code</relationshipName>
    <type>Lookup</type>
</CustomField>