force-app/main/default/objects/Contact_Email_History__c/fields/Marketing_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category__c</fullName>
    <formula>IF(
(Status_Category__c = &apos;Success&apos; || 
Status_Category__c = &apos;Resend&apos;), &apos;Successful&apos;, 
IF( 
(Status_Category__c = &apos;Hard Bounce&apos; || 
Status_Category__c = &apos;Invalid&apos;), 
&apos;Failure&apos;, 
IF( 
(Status_Category__c = &apos;Block&apos; || 
Status_Category__c = &apos;Soft Bounce&apos; || 
Status_Category__c = &apos;Technical&apos; || 
Status_Category__c = &apos;Unknown&apos;), 
&apos;Soft Bounce&apos;, 
IF( 
Status_Category__c = &apos;Email Changed&apos;,
&apos;Email Changed&apos;,
&apos;&apos; 
))))</formula>
    <label>Marketing Category</label>
    <type>Text</type>
</CustomField>