force-app/main/default/objects/Contact_Email_History__c/fields/SFDC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contact Email History</relationshipLabel>
    <relationshipName>Contact_Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>