force-app/main/default/objects/Contact_Email_History__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <description>Will show Email History status if and only if it&apos;s not a Subscription preference change.</description>
    <formula>IF( RecordType.DeveloperName = &apos;Unsubscribe_History&apos;, &apos;Subscription Preferences&apos;, TEXT(Lookup__r.Status_Category__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Category</label>
    <type>Text</type>
</CustomField>