force-app/main/default/objects/Contact_Email_History__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <formula>Lookup__r.Short_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Code</label>
    <type>Text</type>
</CustomField>