force-app/main/default/objects/Contact_Email_History__c/fields/Status_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Status_DateTime__c</fullName>
    <label>Status DateTime</label>
    <type>DateTime</type>
</CustomField>