force-app/main/default/objects/Contact_Email_History__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <formula>Lookup__r.Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Description</label>
    <type>Text</type>
</CustomField>