force-app/main/default/objects/Contact_Email_History__c/fields/User_Edit_Flag__c.field-meta.xml
<CustomField>
    <fullName>User_Edit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Edit Flag</label>
    <type>Checkbox</type>
</CustomField>