force-app/main/default/objects/Contact_Email_History__c/recordTypes/Email_History.recordType-meta.xml
<RecordType>
    <fullName>Email_History</fullName>
    <active>true</active>
    <label>Email History</label>
</RecordType>