force-app/main/default/objects/Contact_Email_History__c/recordTypes/Email_Validation.recordType-meta.xml
<RecordType>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <description>For importing email validation results from external vendors</description>
    <label>Email Validation</label>
</RecordType>