force-app/main/default/objects/Contact_Email_History__c/recordTypes/Unsubscribe_History.recordType-meta.xml
<RecordType>
    <fullName>Unsubscribe_History</fullName>
    <active>true</active>
    <label>Unsubscribe History</label>
</RecordType>